<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin"
		android:paddingBottom="@dimen/activity_vertical_margin">
		<Button
			android:id="@+id/notification_build"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/notification_build"/>
		<EditText
			android:id="@+id/notification_title"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minLines="2"
			android:hint="@string/notification_title"/>

		<EditText
			android:id="@+id/notification_text"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minLines="2"
			android:hint="@string/notification_text"/>

		<EditText
			android:id="@+id/notification_sub"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minLines="2"
			android:hint="@string/notification_sub"/>


		<EditText
			android:id="@+id/notification_ticker"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minLines="2"
			android:hint="@string/notification_ticker"/>

		<EditText
			android:id="@+id/notification_info"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minLines="2"
			android:hint="@string/notification_info"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center">
			<TextView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="5"
				android:textSize="16sp"
				android:paddingLeft="16dp"
				android:text="@string/notification_use_large_icon"/>
			<CheckBox
				android:id="@+id/notification_use_large_icon"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:checked="false"
				/>
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center">
			<TextView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="5"
				android:textSize="16sp"
				android:paddingLeft="16dp"
				android:text="@string/notification_use_chronometer"/>
			<CheckBox
				android:id="@+id/notification_use_chronometer"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:checked="false"
				/>
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center">
			<TextView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="5"
				android:textSize="16sp"
				android:paddingLeft="16dp"
				android:text="@string/notification_use_sound"/>
			<CheckBox
				android:id="@+id/notification_use_sound"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:checked="false"
				/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center">
			<TextView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="5"
				android:textSize="16sp"
				android:paddingLeft="16dp"
				android:text="@string/notification_use_vibration"/>
			<CheckBox
				android:id="@+id/notification_use_vibration"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:checked="false"
				/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center">
			<TextView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="5"
				android:textSize="16sp"
				android:paddingLeft="16dp"
				android:text="@string/notification_use_big_picture"/>
			<CheckBox
				android:id="@+id/notification_use_big_picture"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:checked="false"
				/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center">
			<TextView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="5"
				android:textSize="16sp"
				android:paddingLeft="16dp"
				android:text="@string/notification_use_intent"/>
			<CheckBox
				android:id="@+id/notification_use_intent"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:checked="false"
				/>
		</LinearLayout>
	</LinearLayout>
</ScrollView>
